# rhaii-on-xks

./: .gitignore  .lychee.toml  Makefile  README.md  helmfile.yaml.gotmpl  values.yaml  zensical.toml
.github/workflows/: docs.yml  e2e-mock-test.yml  kserve-release.yaml  kserve-update-chart.yaml  link-check.yaml  rhcl-ci.yaml
charts/cert-manager-operator/: ARCHITECTURE.md  README.md  helmfile.yaml.gotmpl  values.yaml
charts/cert-manager-operator/helmfile.yaml-f8589b1b/: cert-manager-operator.yaml
charts/cert-manager-operator/templates/: infrastructure-cr.yaml
charts/kserve/: Chart.yaml  README.md  generate-chart.sh
charts/kserve/files/: resources.yaml  webhooks.yaml
charts/lws-operator/: ARCHITECTURE.md  README.md  helmfile.yaml.gotmpl
charts/lws-operator/scripts/: update-bundle.sh
charts/lws-operator/templates/: deployment-openshift-lws-operator.yaml
charts/rhcl/: .helmignore  ARCHITECTURE.md  Chart.yaml  Makefile  README.md  helmfile.yaml.gotmpl  values.yaml
charts/rhcl/crds/: authconfigs.authorino.kuadrant.io.yaml  authpolicies.kuadrant.io.yaml  (+12 more)
charts/sail-operator/: ARCHITECTURE.md  README.md
docs/: deploying-llm-d-on-managed-kubernetes.md  deploying-on-openshift.md  deploying-rhaii-helmcharts-on-xks-ea2.md  gateway-setup-for-kserve.md
monitoring-stack/: README.md
test/: deploy-model.sh
test/conformance/: RHCL-TEST-README.md  test-rhcl-deployment.yaml  test-rhcl-dns-operator.yaml  verify-rhcl-deployment.sh  verify-rhcl-dns.sh
validation/: Containerfile  Makefile  README.md  llmd_xks_preflight.py  pyproject.toml  rhcl-pre-deploy-check.sh
(+26 files in other folders)
